labs/k8s-VirtualBox/G-network/25-network-policies/allow-ns-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blocking-all
  namespace: other-ns
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: other-team
    ports:
    - protocol: TCP
      port: 80
